# vtk2rust-example

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  Taskfile.yml  build.rs
cpp_headers/: vtk_utils.h
cpp_src/: main.cpp
src/: cpp_ffi.rs  lib.rs  main.rs
